--- a/src/Acme/CoreBundle/Resources/views/Home/home.html.twig
+++ b/src/Acme/CoreBundle/Resources/views/Home/home.html.twig
@@ -1,18 +1,41 @@
 {% extends 'AcmeCoreBundle::layout.html.twig' %}
 
 {% block content %}
+<p><img class="img-thumbnail" src="http://placekitten.com/g/617/250" alt="0"></p>
+<hr>
+<p>Pellentesque ut massa vitae tortor consequat adipiscing. Nunc consequat rutrum urna eu rhoncus. Aliquam erat volutpat. Aenean id nisl vel nisl sodales pharetra. Nam bibendum ipsum sed risus condimentum congue.</p>
+<p>In erat lacus, vestibulum quis pulvinar a, placerat sed tortor. Proin pellentesque nibh nulla. Donec elit nunc, iaculis ac interdum sed, lacinia quis tellus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed malesuada enim ut lectus sagittis facilisis.</p>
+<hr>
 <div class="row">
-    <div class="col-md-4">
-        <div class="well">
-            <p class="lead" style="font-size: 30px;"><span class="icon-time icon-large"></span>&nbsp;{{ played }}</p>
-            HOURS WORKED
+    <div class="col-md-6">
+        <div class="well" style="margin-bottom: 0;">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="text-center"><span class="icon-time icon-3x" style="margin-top: 10px;"></div>
+                </div>
+                <div class="col-md-8" style="border-left: 1px solid #999;">
+                    <p class="lead" style="font-size: 30px; margin-bottom: 0;"><strong>{{ played }}</strong></p>
+                    <small class="text-muted">HOURS WORKED</small>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="col-md-4">
-        <div class="well">
-            <p class="lead" style="font-size: 30px;"><span class="icon-coffee icon-large"></span>&nbsp;{{ cups }}</p>
-            CUPS OF COFFEE INGURGITATED
+    <div class="col-md-6">
+        <div class="well" style="margin-bottom: 0;">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="text-center"><span class="icon-coffee icon-3x" style="margin-top: 10px;"></div>
+                </div>
+                <div class="col-md-8" style="border-left: 1px solid #999;">
+                    <p class="lead" style="font-size: 30px; margin-bottom: 0;"><strong>{{ cups }}</strong></p>
+                    <small class="text-muted">ESPRESSOS INGURGITATED</small>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block sidebar %}
+<p><img class="img-thumbnail" src="http://placekitten.com/g/293/254" alt="0"></p>
 {% endblock %}
