--- a/src/Acme/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Acme/CoreBundle/Resources/views/layout.html.twig
@@ -71,9 +71,16 @@
             {{ knp_menu_render('AcmeCoreBundle:MenuBuilder:sidebarMenu', {'allow_safe_labels': true, 'depth': 3, 'currentClass': 'active'}) }}
         </div>
     </div>#}
-    {{ msi_block_render('content_top', page) }}
-    {{ block('page_content') }}
-    {{ msi_block_render('content_bottom', page) }}
+    <div class="row">
+        <div class="col-md-8">
+            {{ msi_block_render('content_top', page) }}
+            {{ block('page_content') }}
+            {{ msi_block_render('content_bottom', page) }}
+        </div>
+        <div class="col-md-4">
+            {{ block('sidebar') }}
+        </div>
+    </div>
     <hr>
     <div class="row">
         <div class="col-md-6">
