--- a/src/Acme/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Acme/CoreBundle/Resources/views/layout.html.twig
@@ -37,7 +37,7 @@
             <span class="sr-only">Toggle navigation</span>
                 <span class="icon-large icon-reorder"></span>
             </button>
-            <a class="navbar-brand" href="#">{{ site.translation.brand }}</a>
+            <a class="navbar-btn btn btn-default" href="{{ path('homepage') }}">{{ site.translation.brand }}</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
