--- a/src/Acme/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Acme/CoreBundle/Resources/views/layout.html.twig
@@ -1,4 +1,4 @@
-{% extends 'MsiAdminBundle:Page:layout.html.twig' %}
+{% extends 'MsiCmsBundle:Page:layout.html.twig' %}
 
 {% block css %}
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
@@ -74,7 +74,7 @@
     <div class="row">
         <div class="col-md-8">
             {{ msi_block_render('content_top', page) }}
-            {{ block('page_content') }}
+            {{ block('content') }}
             {{ msi_block_render('content_bottom', page) }}
         </div>
         <div class="col-md-4">
